@@ -51,3 +51,7 @@ Braintree Gateway (Sep 4, 2007)
 Concord Efsnet Gateway (Sep 7, 2007)
 
 * Originally contributed by snacktime
+
+SecurePayTech Gateway (Oct 23, 2007)
+
+* Originally contributed by Jasper Bryant-Greene
