@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Add support for SecurePayTech payment gateway [Jasper Bryant-Greene]
+#
 # * Detect when test credentials are being used with PayJunction [cody]
 #
 # * Update documentation about TrustCommerce void [cody]
